--- a/user/public/index.html
+++ b/user/public/index.html
@@ -8,12 +8,12 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="" />
   <link rel="apple-touch-icon" href="/assets/images/favicon.png" />
-  <meta property="og:title" content="ROBOMINE" />
+  <meta property="og:title" content="Hebrewserve" />
   <meta property="og:description" content="Description of your website here." />
   <meta property="og:image" content="https://app.ROBOMINE.tech/assets/images/logo.png" />
   <meta property="og:url" content="https://app.ROBOMINE.tech" />
   <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="ROBOMINE" />
+  <meta property="og:site_name" content="Hebrewserve" />
   <meta property="og:locale" content="en_US" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Hebrewserve</title>
   <!-- Theme Config Js -->
   <script src="assets/js/hyper-config.js"></script>
 
