--- a/user/index.html
+++ b/user/index.html
@@ -12,8 +12,8 @@
   <!-- Open Graph meta tags -->
   <meta property="og:title" content="Hebrewserve" />
   <meta property="og:description" content="Description of your website here." />
-  <meta property="og:image" content="https://app.ROBOMINE.tech/assets/images/logo.png" />
-  <meta property="og:url" content="https://app.ROBOMINE.tech" />
+  <meta property="og:image" content="https://user.hebrewserve.com/assets/images/logo.png" />
+  <meta property="og:url" content="https://user.hebrewserve.com" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Hebrewserve" />
   <meta property="og:locale" content="en_US" />
